# telegram-bot

./: .env  bot.py
telegram-bot/: bot_stats.db  pyproject.toml
