[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram Bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
